--- a/config/ddos.conf
+++ b/config/ddos.conf
@@ -29,6 +29,12 @@ FIREWALL="auto"
 # Blank would suppress sending of mails
 EMAIL_TO="root"
 
+# Tokens for slack
+SLACK_TOKEN=""
+
+# Blank would suppress sending of slack channel
+SLACK_CHANNEL=""
+
 # Number of seconds the banned ip should remain in blacklist.
 BAN_PERIOD=600
 
