Slack config exclude char #

--- a/config/ddos.conf
+++ b/config/ddos.conf
@@ -32,7 +32,7 @@ EMAIL_TO="root"
 # Tokens for slack
 SLACK_TOKEN=""
 
-# Blank would suppress sending of slack channel
+# Blank would suppress sending of slack channel (exclude #)
 SLACK_CHANNEL=""
 
 # Number of seconds the banned ip should remain in blacklist.
